<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/red"
        android:id="@+id/btnRed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_toEndOf="@+id/btnRed"
        android:backgroundTint="@color/green"
        android:text="@string/green"
        android:textSize="@dimen/sp_20" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Blue"
        android:id="@+id/btnBlue"
        android:layout_marginTop="@dimen/sp_20"
        android:backgroundTint="@color/blue"
        android:textSize="@dimen/sp_20"
        android:layout_toEndOf="@+id/btnGreen"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGreen"
        android:layout_marginStart="120dp"
        android:text="@string/number"
        android:textSize="@dimen/sp_20" />
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:id="@+id/fragmentContainer"
        android:name="com.tanveer.fragmentapplication.lifecyclefragment"
        />
</RelativeLayout>